--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ html {
 body {
     font-size: 16px;
     font-family: 'Karla', sans-serif;
-    background-color: var(--color_grayish_blue);
+    background-color: var(--color_light_gray);
 }
 
 /* UTILITIES */
@@ -61,6 +61,8 @@ body {
 .join_container {
     background-color: var(--color_white);
     width: 100%;
+    border-top-left-radius: 0.8rem;
+    border-top-right-radius: 0.8rem;
 }
 
 .join_container :nth-child(1) {
@@ -138,6 +140,8 @@ body {
     width: 100%;
     background-color: var(--color_white_cyan);
     color: var(--color_white);
+    border-bottom-right-radius: 0.8rem;
+    border-bottom-left-radius: 0.8rem;
 }
 
 .why_us_container :nth-child(1) {
@@ -149,10 +153,76 @@ body {
 .why_us_container :nth-child(2) {
     font-weight: 400;
     font-size: 1.4rem;
-    /* text-align: justify; */
     line-height: 2.3rem;
     margin: 5% 35% 5% 7%;
 }
 
 
-@media (min-width: 1000px) {}
+@media (min-width: 1000px) {
+
+    /* MAIN CONTENT */
+
+    .main_container {
+        justify-content: center;
+    }
+
+    /* GRID_CONTAINER */
+
+    .grid_container {
+        width: 52%;
+        grid: 1fr / 0.5fr 0.5fr;
+    }
+
+    /* JOIN_CONTAINER */
+
+    .join_container {
+        grid-column: 1 / 3;
+    }
+
+    .join_container :nth-child(1) {
+        font-size: 3rem;
+        margin: 5% 7% 3% 7%;
+    }
+
+    .join_container :nth-child(2) {
+        font-size: 2rem;
+        margin: 0 7% 2% 7%;
+    }
+
+    .join_container :nth-child(3) {
+        font-size: 1.8rem;
+        margin: 0 7% 7% 7%;
+    }
+
+    /* SUBSCRIPTION_CONTAINER */
+
+    .subscription_container {
+        border-bottom-left-radius: 0.8rem;
+    }
+
+    .subscription_container :nth-child(1) {
+        font-size: 2rem;
+        margin: 10% 7% 5% 13%;
+    }
+
+    .subscription_container :nth-child(2) {
+        font-size: 4rem;
+        margin: 0 7% 5% 13%;
+    }
+
+    .subscription_container :nth-child(3) {
+        margin: 0 7% 0 13%;
+    }
+
+    /* WHY_US_CONTAINER */
+
+    .why_us_container {
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0.8rem;
+    }
+
+    .why_us_container :nth-child(1) {
+        font-size: 2rem;
+        margin: 10% 7% 5% 7%;
+    }
+}
